Update the minimum requirements for the project JDK and some JVM args